config/ix-device-plugin-v4.4.0.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: iluvatar-device-plugin
  namespace: kube-system
  labels:
    app.kubernetes.io/name: iluvatar-device-plugin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: iluvatar-device-plugin
  template:
    metadata:
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ""
      labels:
        app.kubernetes.io/name: iluvatar-device-plugin
    spec:
      priorityClassName: "system-node-critical"
      securityContext:
        null
      serviceAccountName: iluvatar-device-plugin-sa
      containers:
        - name: iluvatar-device-plugin
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: true
          image: "registry.iluvatar.com.cn:10443/k8s/ix-device-plugin:4.4.0"
          imagePullPolicy: Never
          livenessProbe:
            exec:
              command:
                - ls
                - /var/lib/kubelet/device-plugins/iluvatar-gpu.sock
            periodSeconds: 5
          startupProbe:
            exec:
              command:
                - ls
                - /var/lib/kubelet/device-plugins/iluvatar-gpu.sock
            periodSeconds: 5
          resources:
            {}
          volumeMounts:
            - mountPath: /var/lib/kubelet/device-plugins
              name: device-plugin
            - mountPath: /run/udev
              name: udev-ctl
              readOnly: true
            - mountPath: /sys
              name: sys
              readOnly: true
            - mountPath: /sys/bus/pci/drivers/iluvatar
              name: iluvatar-pci-driver
              readOnly: false
            - mountPath: /dev
              name: dev
            - name: ixc
              mountPath: /ixconfig
            - name: ix-device-plugin-log
              mountPath: /var/log/iluvatarcorex/
      volumes:
        - hostPath:
            path: /var/lib/kubelet/device-plugins
          name: device-plugin
        - hostPath:
            path: /run/udev
          name: udev-ctl
        - hostPath:
            path: /sys
          name: sys
        - hostPath:
            path: /sys/bus/pci/drivers/iluvatar
          name: iluvatar-pci-driver
        - hostPath:
            path: /etc/udev/
          name: udev-etc
        - hostPath:
            path: /dev
          name: dev
        - name: ixc
          configMap:
            name: ix-config
        - name: ix-device-plugin-log
          hostPath:
            path: /var/log/iluvatarcorex
            type: DirectoryOrCreate
