config/ix-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: "ix-exporter"
  namespace: "kube-system"
  labels:
    app.kubernetes.io/name: "ix-exporter"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "ix-exporter"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "ix-exporter"
      name: "ix-exporter"
    spec:
      tolerations:
        - key: CriticalAddonsOnly
          operator: Exists
      priorityClassName: system-node-critical
      serviceAccountName: ix-exporter
      containers:
        - image: "registry.iluvatar.com.cn:10443/k8s/ix-exporter:latest-x86_64"
          imagePullPolicy: IfNotPresent
          name: "ix-exporter"
          args:
            - --log-level=4
            - --enable-kubernetes=true
            - --ip=0.0.0.0
            - --resource-name="iluvatar.com/gpu"
          securityContext:
            privileged: true
            runAsNonRoot: false
            runAsUser: 0
          ports:
            - name: "metrics"
              containerPort: 32021
          volumeMounts:
            - name: pod-resources
              readOnly: true
              mountPath: "/var/lib/kubelet/pod-resources"
            - name: host-proc
              mountPath: /host-proc
              readOnly: true
              mountPropagation: HostToContainer
            - name: host-time
              mountPath: /etc/localtime
              readOnly: true
            - mountPath: /sys
              name: sys
              readOnly: true
            - mountPath: /dev
              name: dev
            - name: log-dir
              mountPath: "/var/log/iluvatarcorex"
              readOnly: false
      volumes:
        - name: host-proc
          hostPath:
            path: "/proc"
        - name: pod-resources
          hostPath:
            path: "/var/lib/kubelet/pod-resources"
        - name: host-time
          hostPath:
            path: /etc/localtime
        - name: sys
          hostPath:
            path: /sys
        - name: dev
          hostPath:
            path: /dev
        - name: log-dir
          hostPath:
            path: "/var/log/iluvatarcorex"
            type: DirectoryOrCreate

---
kind: Service
apiVersion: v1
metadata:
  name: "ix-exporter"
  namespace: "kube-system"
  labels:
    app.kubernetes.io/name: "ix-exporter"
spec:
  selector:
    app.kubernetes.io/name: "ix-exporter"
  type: NodePort
  ports:
    - name: "metrics"
      port: 32021
      targetPort: 32021
      nodePort: 32021
