config/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
    app.kubernetes.io/managed-by: Helm
    chart: minio-5.0.19
    heritage: Helm
    release: minio
  name: minio-svc
  namespace: minio
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: minio-service
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
    release: minio
  sessionAffinity: None
  type: ClusterIP
