config/npu-exporter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: exporter-network-policy
spec:
  podSelector:
    matchLabels:
      app: npu-exporter
  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: npu-exporter
spec:
  selector:
    matchLabels:
      app: npu-exporter
  template:
    metadata:
      ##### For Kubernetes versions lower than 1.19, seccomp is used with annotations.
      annotations:
        seccomp.security.alpha.kubernetes.io/pod: runtime/default
      labels:
        app: npu-exporter
    spec:
      ##### For Kubernetes version 1.19 and above, seccomp is used with securityContext:seccompProfile
#      securityContext:
#        seccompProfile:
#          type: RuntimeDefault
      automountServiceAccountToken: false
      nodeSelector:
        accelerator: huawei-Ascend910
      containers:
      - name: npu-exporter
        image: swr.cn-south-1.myhuaweicloud.com/ascendhub/npu-exporter:v5.0.0
        resources:
          requests:
              memory: 1000Mi
              cpu: 1000m
          limits:
              memory: 1000Mi
              cpu: 1000m
        imagePullPolicy: Never
        command: [ "/bin/bash", "-c", "--"]
        # pair firstly
        args: [ "umask 027;npu-exporter -port=8082 -ip=0.0.0.0  -updateTime=5
                 -logFile=/var/log/mindx-dl/npu-exporter/npu-exporter.log -logLevel=0 -containerMode=docker" ]
        securityContext:
          privileged: true
          readOnlyRootFilesystem: true
          runAsUser: 0
          runAsGroup: 0
        ports:
          - name: http
            containerPort: 8082
            protocol: TCP
        volumeMounts:
          - name: log-npu-exporter
            mountPath: /var/log/mindx-dl/npu-exporter
          - name: localtime
            mountPath: /etc/localtime
            readOnly: true
          - name: ascend-driver
            mountPath: /usr/local/Ascend/driver
            readOnly: true
          - name: ascend-dcmi
            mountPath: /usr/local/dcmi
            readOnly: true
          - name: docker-shim  # delete when only use containerd or isula
            mountPath: /var/run/dockershim.sock
            readOnly: true
          - name: docker  # delete when only use containerd or isula
            mountPath: /var/run/docker
            readOnly: true
          - name: cri-dockerd  # reserve when k8s version is 1.24+ and the container runtime is docker
            mountPath: /var/run/cri-dockerd.sock
            readOnly: true
          - name: containerd  # delete when only use isula
            mountPath: /run/containerd
            readOnly: true
          - name: isulad  # delete when use containerd or docker
            mountPath: /run/isulad.sock
            readOnly: true
          - name: tmp
            mountPath: /tmp
      volumes:
        - name: log-npu-exporter
          hostPath:
            path: /var/log/mindx-dl/npu-exporter
            type: Directory
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: ascend-driver
          hostPath:
            path: /usr/local/Ascend/driver
        - name: ascend-dcmi
          hostPath:
            path: /usr/local/dcmi
        - name: docker-shim # delete when only use containerd or isula
          hostPath:
            path: /var/run/dockershim.sock
        - name: docker  # delete when only use containerd or isula
          hostPath:
            path: /var/run/docker
        - name: cri-dockerd # reserve when k8s version is 1.24+ and the container runtime is docker
          hostPath:
            path: /var/run/cri-dockerd.sock
        - name: containerd  # delete when only use isula
          hostPath:
            path: /run/containerd
        - name: isulad  # delete when use containerd or docker
          hostPath:
            path: /run/isulad.sock
        - name: tmp
          hostPath:
            path: /tmp
---
apiVersion: v1
kind: Service
metadata:
  name: npu-exporter
  labels:
    app: npu-exporter
spec:
  selector:
    app: npu-exporter
  ports:
    - name: metrics
      port: 8082
      targetPort: 8082
